--- a/resume/css/responsive.css
+++ b/resume/css/responsive.css
@@ -44,6 +44,9 @@
 		font-size: 15px;
 		padding: 0 30px;
 	}
+	#wx  {
+	  display:block;
+	}
 	.left-control, .right-control {
 		font-size: 20px;
 		height: 30px;
