--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,5 +51,12 @@ function changeTheme()
   ga('require', 'linkid', 'linkid.js');
   ga('send', 'pageview');
 </script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2415919287136048",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 
